# polyblade

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  clippy.toml  deny.toml  flake.nix  fly.toml  shell.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-web.yml  fly-deploy.yml  release.yml  rust.yml  version-bump-check.yml
assets/: main.css  tailwind.css
deploy/: vercel.json
src/: graphics.rs  lib.rs  main.rs  native_paint.rs  renderer.rs
src/bones/: face.rs  polyhedron.rs
src/components/: menu.rs  mod.rs
src/polyhedron/: conway.rs  face.rs  mod.rs  palette.rs  platonic.rs  primitives.rs  render.rs  test.rs  transaction.rs
src/polyhedron/shape/: conway.rs  edge.rs  mod.rs  test.rs  topology.rs
src/polyhedron/shape/cycles/: cycle.rs  mod.rs
src/polyhedron/shape/distance/: conway.rs  dfs.rs  mod.rs  svg.rs  test.rs
src/polyhedron/shape/planarity/: control.rs  dfs.rs  lr_state.rs  mod.rs  test.rs
src/render/: app.rs  camera.rs  color.rs  controls.rs  driver.rs  message.rs  mod.rs  palette.rs  polydex.rs  state.rs
src/render/pipeline/: mod.rs  polyhedron_primitive.rs  texture.rs
src/render/pipeline/buffer/: mod.rs
src/views/: navbar.rs
