[package]
name = "polyblade"
version = "0.1.0"
authors = ["Vera Gonzalez <me@vera.lgbt>"]
edition = "2021"

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cfg-if = { version = "1.0" }
color = { version = "0.3" }
dioxus = { version = "0.7.0-alpha.2", features = ["router"] }
log = { version = "0.4.27" }
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
wgpu = { version = "25.0.2", features = ["webgpu"] }

# This override stuff is only necessary if we're in server mode
[target.'cfg(feature = "fullstack")'.dependencies]
dioxus-ssr = { version = "0.7.0-alpha.2" }
dioxus-isrg = { version = "0.7.0-alpha.2" }
dioxus-liveview = { version = "0.7.0-alpha.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
colog = { version = "1.3.0" }

# These dependencies are incompatible with native builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "1", features = ["color"] }
web-sys = { version = "0.3.77", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }

[features]
default = ["web"]
fullstack = ["dioxus/fullstack"]
web = ["dioxus/web"]

[profile]
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
