[package]
name = "polyblade"
version = "0.3.0"
authors = ["Vera Gonzalez <me@vera.lgbt>"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Make shapes dance."
repository = "https://github.com/organizedgrime/polyblade"
readme = "README.md"
keywords = ["WebGPU", "graphics", "graphs", "polyhedra"]
categories = [
  "graphics",
  "mathematics",
  "visualization",
  "wasm",
  "web-programming",
]

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cfg-if = { version = "1.0" }
dioxus = { version = "0.7.9", features = ["router"] }
log = { version = "0.4.27" }
rand = { version = "0.8.5" }
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
wgpu = { version = "26", features = ["webgpu"] }

[dev-dependencies]
test-case = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
colog = { version = "1.3.0" }
dioxus-native = { version = "0.7.9", optional = true }
tokio = { version = "1", features = ["time"] }

# These dependencies are incompatible with native builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "1", features = ["color"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.77", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }
web-time = { version = "1" }

[features]
default = ["web"]
fullstack = ["dioxus/fullstack"]
native = ["dep:dioxus-native", "dioxus/native"]
web = ["dioxus/web"]

[profile]
[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
